loading-spinner just in case

--- a/voting-styles.css
+++ b/voting-styles.css
@@ -1,4 +1,4 @@
-.search-result {
+.voting-search-result {
     position: relative;
 }
 
@@ -13,4 +13,59 @@
 
 .voting-container button.vote-sent {
     background: red;
+}
+
+.voting-count {
+    position: relative;
+    margin-left: 2px;
+    margin-top: 7px;
+    height: 24px;
+}
+
+.voting-count.vote-loading {
+    margin-top: 3px;
+    height: 30px;
+}
+
+.voting-spinner {
+    position: absolute;
+    transform-style: preserve-3d;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+      
+.spinner-animation {
+    animation: spinner-rotate 2s linear infinite;
+    width: 1rem;
+    height: 1rem;
+}
+      
+.spinner-animation .spinner-path {
+    stroke: #000;
+    stroke-linecap: round;
+    animation: spinner-dash 1.5s ease-in-out infinite;
+}
+      
+@keyframes spinner-rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+      
+@keyframes spinner-dash {
+    0% {
+        stroke-dasharray: 1, 150;
+        stroke-dashoffset: 0;
+    }
+      
+    50% {
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -35;
+    }
+      
+    100% {
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -124;
+    }
 }
